fix skills page on mobile

--- a/skills/style.css
+++ b/skills/style.css
@@ -14,6 +14,7 @@ html {
 
 body {
     background-color: #c0c5b8;
+    overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
